service/tests/schemas/snapshots/request/pagination_query_validation_rejects_negative_params@request.snap
---
source: tests/schemas/request.rs
expression: result
---
Err(
    "Validation error: {\"limit\":\"Limit must be a positive integer\",\"page\":\"Page must be a positive integer\"}",
)
