service/tests/schemas/snapshots/request/pagination_query_validation_rejects_zero_page@request.snap
---
source: tests/schemas/request.rs
expression: result
---
Err(
    "Validation error: {\"page\":\"Page must be a positive integer\"}",
)
