service/tests/schemas/snapshots/request/permission_role_query_validation_rejects_negative_params@request.snap
---
source: tests/schemas/request.rs
expression: result
---
Err(
    "Validation error: {\"permission_id\":\"Permission ID must be a positive integer\",\"role_id\":\"Role ID must be a positive integer\"}",
)
