service/tests/schemas/snapshots/request/permission_role_query_validation_rejects_zero_permission_id@request.snap
---
source: tests/schemas/request.rs
expression: result
---
Err(
    "Validation error: {\"permission_id\":\"Permission ID must be a positive integer\"}",
)
