service/tests/schemas/snapshots/request/permission_role_query_validation_rejects_zero_role_id@request.snap
---
source: tests/schemas/request.rs
expression: result
---
Err(
    "Validation error: {\"role_id\":\"Role ID must be a positive integer\"}",
)
